--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- FontStyles  -->
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Roboto+Slab:100,300,400,700" rel="stylesheet">
+    <!-- Internal style sheeet  -->
+    <link rel="stylesheet" href="CSS/style.css">
+
     <title>NBA</title>
   </head>
   <body>
