Added team details, added styles, fixed poll Voting bug, trying to fix duplicate subscriber bug.

--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,14 @@
     <!-- FontStyles  -->
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Roboto+Slab:100,300,400,700" rel="stylesheet">
     <!-- Internal style sheeet  -->
-    <link rel="stylesheet" href="CSS/style.css">
+    
 
 
     <!-- React-Slick CSS import -->
     <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     
-
+    <link rel="stylesheet"  type="text/css" href="/CSS/style.css">
 
     <title>NBA</title>
   </head>
